force-app/main/default/objects/Demo__c/Demo__c.object-meta.xml
<CustomObject>
    <description>Object used to register the different demos programmed for commercial management</description>
    <label>Demo</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Demo ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>