force-app/main/default/objects/Demo__c/fields/Demo_Type__c.field-meta.xml
<CustomField>
    <fullName>Demo_Type__c</fullName>
    <label>Demo Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Sales</fullName>
            </value>
            <value>
                <fullName>Demo Sales with Pre Sales</fullName>
            </value>
            <value>
                <fullName>POC (Sales with Pre Sales)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>