force-app/main/default/objects/Demo__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viable</fullName>
            </value>
            <value>
                <fullName>Non-viable</fullName>
            </value>
            <value>
                <fullName>Additional Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>