force-app/main/default/objects/Demo__c/fields/Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date__c</fullName>
    <label>Schedule Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>